--- a/multiply.html
+++ b/multiply.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Multiplication</title>
+<!Doctype html>
+<html>
+<body>
 <script>
+		
 		
 
 		var num1 = prompt("Give me first number.");
@@ -11,8 +10,7 @@
 		var num2 = prompt("Give me second number.");
 		
 		console.log(num1 + " times " + num2 + " is " + num1 * num2);
+
 </script>
-</head>
-<body>
 </body>
 </html>
